manifests/media/maintainerr/base/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: maintainerr
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: maintainerr
  ingress:
    - fromEntities:
        - ingress
        - remote-node
      toPorts:
        - ports:
            - port: "4433"
            - port: "6246"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities: 
        - cluster    # For OAuth2Proxy redirects
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
      toPorts:
        - ports:
            - port: "32400"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: overseerr
        - matchLabels:
            app.kubernetes.io/name: seerr
      toPorts:
        - ports:
            - port: "5055"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: "7878"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "8989"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: tautulli
      toPorts:
        - ports:
            - port: "8181"
